EVA-20 feat: Se incluye en el menú lateral la el módulo para colaboradores.

--- a/TalentoHumano/templates/TalentoHumano/_common/menu_aplicacion.html
+++ b/TalentoHumano/templates/TalentoHumano/_common/menu_aplicacion.html
@@ -4,3 +4,10 @@
         <span class="nav-link-text" data-i18n="nav.talentohumano_entidades-cafe">Entidades CAFE</span>
     </a>
  </li>
+  <li>
+    <a href="{% url 'TalentoHumano:colaboradores-index' %}" title="Perfil colaboradores" data-filter-tags="perfil colaboradores">
+        <i class="far fa-user"></i>
+        <span class="nav-link-text" data-i18n="nav.talentohumano_perfil-colaboradores">Perfil de colaboradores</span>
+    </a>
+ </li>
+
