EVA-20 refactor: Se modifican variables en el index de colaboradores.

--- a/TalentoHumano/templates/TalentoHumano/Colaboradores/index.html
+++ b/TalentoHumano/templates/TalentoHumano/Colaboradores/index.html
@@ -61,7 +61,7 @@
                                             </span>
                                             <div class="info-card-text flex-1">
                                                 <a href="javascript:void(0);" class="fs-xl text-truncate text-truncate-lg text-info" data-toggle="dropdown" aria-expanded="false">
-                                                    {{ colaborador.persona.nombre }}
+                                                    {{ colaborador.usuario.first_name }}
                                                     <i class="fal fa-angle-down d-inline-block ml-1 fs-md"></i>
                                                 </a>
                                                 <div class="dropdown-menu">
@@ -80,7 +80,7 @@
                                     <div class="card-body p-0 collapse show">
                                         <div class="p-3">
                                             <a href="tel:+13174562564" class="mt-1 d-block fs-sm fw-400 text-dark">
-                                                <i class="fas fa-mobile-alt text-muted mr-2"></i>{{ colaborador.persona.telefono }}</a>
+                                                <i class="fas fa-mobile-alt text-muted mr-2"></i>{{ colaborador.telefono }}</a>
                                             <a href="mailto:oliver.kopyov@smartadminwebapp.com" class="mt-1 d-block fs-sm fw-400 text-dark">
                                                 <i class="fas fa-mouse-pointer text-muted mr-2"></i> {{colaborador.correo}}</a>
                                             <address class="fs-sm fw-400 mt-4 text-muted">
