--- a/TalentoHumano/templates/TalentoHumano/Colaboradores/crear-editar.html
+++ b/TalentoHumano/templates/TalentoHumano/Colaboradores/crear-editar.html
@@ -50,20 +50,30 @@
                                                                          <div class="form-group">
                                                                             <div class="form-row">
                                                                                 <div class="col-md-6">
-                                                                                {% input_text_tag 'nombre' 'Nombre' placeholder="Ingrese el nombre" required="" maxlength="100" value=colaborador.nombre mensaje_validacion='Por favor digite el nombre' invalido=errores.nombre %}
+                                                                                {% input_text_tag 'nombre' 'Nombres' placeholder="Ingrese los nombres" required="" maxlength="100" value=colaborador.nombre mensaje_validacion='Por favor digite el nombre' invalido=errores.nombre %}
                                                                                 </div>
                                                                                 <div class="col-md-6">
-                                                                                {% input_text_tag 'apellido' 'Apellido' placeholder="Ingrese el apellido" required="" maxlength="100" value=colaborador.apellido mensaje_validacion='Por favor digite el apellido' invalido=errores.apellido %}
+                                                                                {% input_text_tag 'apellido' 'Apellidos' placeholder="Ingrese los apellidos" required="" maxlength="100" value=colaborador.apellido mensaje_validacion='Por favor digite el apellido' invalido=errores.apellido %}
                                                                                 </div>
                                                                             </div>
                                                                         </div>
                                                                         <div class="form-group">
                                                                             <div class="form-row">
                                                                                 <div class="col-md-6">
-                                                                                    {% input_number_tag 'identificacion' 'Identificación' placeholder="Ingrese el número de identificación" required="" maxlength="20" value=colaborador.identificacion mensaje_validacion='Por favor digite el número de identificación' invalido=errores.identificación %}
+                                                                                    {% input_number_tag 'identificacion' 'Identificación' placeholder="Ingrese el número de identificación" required="" min='0' max="99999999999" onInput="validarLongitud(11,this)" value=colaborador.identificacion mensaje_validacion='Por favor digite el número de identificación' invalido=errores.identificación %}
                                                                                 </div>
                                                                                 <div class="col-md-6">
                                                                                     {% select_tag tipo_identificacion 'tipo_identificacion_id' 'Seleccione un tipo de identificación' texto_label="Tipo de identificación" value=colaborador.tipo_identificacion required="" mensaje_validacion='Por favor seleccione un tipo de identificación' invalido=errores.tipo_identificacion %}
+                                                                                </div>
+                                                                            </div>
+                                                                        </div>
+                                                                         <div class="form-group">
+                                                                            <div class="form-row">
+                                                                                <div class="col-md-6">
+                                                                                    {% input_date_tag 'fecha_expedicion' 'Fecha de expedición' placeholder="Seleccione una fecha" required="" autocomplete="off" value=colaborador.fecha_expedicion  mensaje_validacion='Por favor seleccione una fecha' invalido=errores.fecha_expedicion %}
+                                                                                </div>
+                                                                                <div class="col-md-6">
+                                                                                    {% select_tag genero 'genero' 'Seleccione un género' texto_label="Género" value=colaborador.genero required="" mensaje_validacion='Por favor seleccione un género' invalido=errores.genero %}
                                                                                 </div>
                                                                             </div>
                                                                         </div>
@@ -73,25 +83,32 @@
                                                                                     {% input_text_tag 'direccion' 'Dirección' placeholder="Ingrese la dirección" required="" maxlength="100" value=colaborador.direccion mensaje_validacion='Por favor digite la dirección.' invalido=errores.direccion %}
                                                                                 </div>
                                                                                 <div class="col-md-6">
-                                                                                    {% input_email_tag 'correo' 'Correo del colaborador' placeholder="Ingrese el correo electrónico del colaborador" required="" maxlength="100" value=colaborador.correo mensaje_validacion='Por favor digite el correo electrónico del colaborador.' invalido=errores.correo %}
+                                                                                    {% input_email_tag 'correo' 'Correo electrónico' placeholder="Ingrese el correo electrónico" required="" maxlength="100" value=colaborador.correo mensaje_validacion='Por favor digite el correo electrónico del colaborador.' invalido=errores.correo %}
                                                                                 </div>
                                                                             </div>
                                                                         </div>
                                                                         <div class="form-group">
                                                                             <div class="form-row">
                                                                                 <div class="col-md-6">
-                                                                                {% input_date_tag 'fecha_nacimiento' 'Fecha de nacimiento' placeholder="Seleccione una fecha" required="" autocomplete="off" value=colaborador.fecha_nacimiento  mensaje_validacion='Por favor seleccione una fecha.' invalido=errores.fecha_nacimiento %}
+                                                                                {% input_number_tag 'telefono' 'Teléfono' placeholder="Ingrese el número telefónico" required="" min='0' max="9999999999" onInput="validarLongitud(10,this)" value=colaborador.telefono mensaje_validacion='Por favor digite el número telefónico' invalido=errores.telefono %}
                                                                                 </div>
                                                                                 <div class="col-md-6">
-                                                                                {% select_tag departamentos 'departamento_id' 'Seleccione un departamento' texto_label="Departamento" value=colaborador.departamento required="" mensaje_validacion='Por favor seleccione un departamento' %}
+                                                                                {% input_date_tag 'fecha_nacimiento' 'Fecha de nacimiento' placeholder="Seleccione una fecha" required="" autocomplete="off" value=colaborador.fecha_nacimiento  mensaje_validacion='Por favor seleccione una fecha.' invalido=errores.fecha_nacimiento %}
                                                                                 </div>
                                                                             </div>
                                                                         </div>
                                                                     <div class="form-group">
                                                                         <div class="form-row">
                                                                             <div class="col-md-6">
+                                                                            {% select_tag departamentos 'departamento_id' 'Seleccione un departamento' texto_label="Departamento" value=colaborador.departamento required="" mensaje_validacion='Por favor seleccione un departamento' %}
+                                                                            </div>
+                                                                            <div class="col-md-6">
                                                                             {% select_tag municipios 'municipio_id' 'Seleccione un municipio' texto_label="Municipio" value=colaborador.municipio required="" mensaje_validacion='Por favor seleccione un municipio'  %}
                                                                             </div>
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="form-group">
+                                                                        <div class="form-row">
                                                                             <div class="col-md-6">
                                                                             {% select_tag lugar_nacimiento 'centro_poblado_id' 'Seleccione lugar de nacimiento' texto_label="Lugar de nacimiento" value=colaborador.lugar_nacimiento required="" mensaje_validacion='Por favor seleccione un lugar de nacimiento' invalido=errores.lugar_nacimiento %}
                                                                             </div>
@@ -126,7 +143,7 @@
                                                                  <div class="form-group">
                                                                         <div class="form-row">
                                                                             <div class="col-md-6">
-                                                                            {% select_tag jefe_inmediato 'jefe_inmediato_id' 'Seleccione el jefe inmediato' texto_label="Jefe inmediato" value=colaborador.jefe_inmediato required="" mensaje_validacion='Por favor seleccione un jefe inmediato.' invalido=errores.jefe_inmediato %}
+                                                                            {% select_tag jefe_inmediato 'jefe_inmediato_id' 'Seleccione el jefe inmediato' texto_label="Jefe inmediato" value=colaborador.jefe_inmediato  mensaje_validacion='Por favor seleccione un jefe inmediato.' invalido=errores.jefe_inmediato %}
                                                                             </div>
                                                                             <div class="col-md-6">
                                                                             {% select_tag contrato 'contrato_id' 'Seleccione un contrato' texto_label="Contrato" value=colaborador.contrato required="" mensaje_validacion='Por favor seleccione un contrato' invalido=errores.contrato %}
