EVA-20 fix: Se corrige campo correo de colaborador

--- a/TalentoHumano/templates/TalentoHumano/Colaboradores/index.html
+++ b/TalentoHumano/templates/TalentoHumano/Colaboradores/index.html
@@ -65,7 +65,7 @@
                                                     <i class="fal fa-angle-down d-inline-block ml-1 fs-md"></i>
                                                 </a>
                                                 <div class="dropdown-menu">
-                                                    <a class="dropdown-item" href="#">{{ colaborador.correo }}</a>
+                                                    <a class="dropdown-item" href="#">{{ colaborador.usuario.email }}</a>
                                                     <a class="dropdown-item" href="#">Create Appointment</a>
                                                     <a class="dropdown-item" href="#">Block User</a>
                                                 </div>
