--- a/TalentoHumano/templates/TalentoHumano/Colaboradores/crear-editar.html
+++ b/TalentoHumano/templates/TalentoHumano/Colaboradores/crear-editar.html
@@ -31,7 +31,7 @@
                                     <div class="panel-container show">
                                         <div class="panel-content">
                                             {% if opcion == 'editar' %}
-                                                <form action="{% url 'TalentoHumano:entidades-editar' entidad_cafe.id %}" id="colaboradores-form" method="post" class="needs-validation" novalidate>
+                                                <form action="{% url 'TalentoHumano:colaboradores-editar' colaborador.id %}" id="colaboradores-form" method="post" class="needs-validation" novalidate>
                                             {% else %}
                                                 <form action="{% url 'TalentoHumano:colaboradores-crear' %}" id="colaboradores-form" method="post" class="needs-validation" novalidate>
                                             {% endif %}
@@ -50,10 +50,10 @@
                                                             <div class="form-group">
                                                                 <div class="form-row">
                                                                     <div class="col-md-6">
-                                                                        {% input_text_tag 'nombre' 'Nombres' placeholder="Ingrese los nombres" required="" maxlength="100" value=colaborador.nombre mensaje_validacion='Por favor digite el nombre' invalido=errores.nombre %}
+                                                                        {% input_text_tag 'nombre' 'Nombres' placeholder="Ingrese los nombres" required="" maxlength="100" value=colaborador.nombres mensaje_validacion='Por favor digite el nombre' invalido=errores.nombre %}
                                                                     </div>
                                                                     <div class="col-md-6">
-                                                                        {% input_text_tag 'apellido' 'Apellidos' placeholder="Ingrese los apellidos" required="" maxlength="100" value=colaborador.apellido mensaje_validacion='Por favor digite el apellido' invalido=errores.apellido %}
+                                                                        {% input_text_tag 'apellido' 'Apellidos' placeholder="Ingrese los apellidos" required="" maxlength="100" value=colaborador.apellidos mensaje_validacion='Por favor digite el apellido' invalido=errores.apellido %}
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -63,7 +63,7 @@
                                                                         {% input_number_tag 'identificacion' 'Identificación' placeholder="Ingrese el número de identificación" required="" min='0' max="99999999999" onInput="validarLongitud(11,this)" value=colaborador.identificacion mensaje_validacion='Por favor digite el número de identificación' invalido=errores.identificación %}
                                                                     </div>
                                                                     <div class="col-md-6">
-                                                                        {% select_tag tipo_identificacion 'tipo_identificacion_id' 'Seleccione un tipo de identificación' texto_label="Tipo de identificación" value=colaborador.tipo_identificacion required="" mensaje_validacion='Por favor seleccione un tipo de identificación' invalido=errores.tipo_identificacion %}
+                                                                        {% select_tag tipo_identificacion 'tipo_identificacion_id' 'Seleccione un tipo de identificación' texto_label="Tipo de identificación" value=colaborador.tipo_identificacion_id required="" mensaje_validacion='Por favor seleccione un tipo de identificación' invalido=errores.tipo_identificacion %}
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -83,7 +83,7 @@
                                                                         {% input_text_tag 'direccion' 'Dirección' placeholder="Ingrese la dirección" required="" maxlength="100" value=colaborador.direccion mensaje_validacion='Por favor digite la dirección.' invalido=errores.direccion %}
                                                                     </div>
                                                                     <div class="col-md-6">
-                                                                        {% input_email_tag 'correo' 'Correo electrónico' placeholder="Ingrese el correo electrónico" required="" maxlength="100" value=colaborador.correo mensaje_validacion='Por favor digite el correo electrónico del colaborador.' invalido=errores.correo %}
+                                                                        {% input_email_tag 'correo' 'Correo electrónico' placeholder="Ingrese el correo electrónico" required="" maxlength="100" value=colaborador.usuario.email mensaje_validacion='Por favor digite el correo electrónico del colaborador.' invalido=errores.correo %}
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -100,17 +100,17 @@
                                                             <div class="form-group">
                                                                 <div class="form-row">
                                                                     <div class="col-md-6">
-                                                                        {% select_tag departamentos 'departamento_id' 'Seleccione un departamento' texto_label="Departamento" value=colaborador.departamento required="" mensaje_validacion='Por favor seleccione un departamento' %}
+                                                                        {% select_tag departamentos 'departamento_id' 'Seleccione un departamento' texto_label="Departamento" value=colaborador.lugar_nacimiento.municipio.departamento.id required="" mensaje_validacion='Por favor seleccione un departamento' %}
                                                                     </div>
                                                                     <div class="col-md-6">
-                                                                        {% select_tag municipios 'municipio_id' 'Seleccione un municipio' texto_label="Municipio" value=colaborador.municipio required="" mensaje_validacion='Por favor seleccione un municipio'  %}
+                                                                        {% select_tag municipios 'municipio_id' 'Seleccione un municipio' texto_label="Municipio" value=colaborador.lugar_nacimiento.municipio.id required="" mensaje_validacion='Por favor seleccione un municipio'  %}
                                                                     </div>
                                                                 </div>
                                                             </div>
                                                             <div class="form-group">
                                                                 <div class="form-row">
                                                                     <div class="col-md-6">
-                                                                        {% select_tag lugar_nacimiento 'centro_poblado_id' 'Seleccione lugar de nacimiento' texto_label="Lugar de nacimiento" value=colaborador.lugar_nacimiento required="" mensaje_validacion='Por favor seleccione un lugar de nacimiento' invalido=errores.lugar_nacimiento %}
+                                                                        {% select_tag lugar_nacimiento 'centro_poblado_id' 'Seleccione lugar de nacimiento' texto_label="Lugar de nacimiento" value=colaborador.lugar_nacimiento.id required="" mensaje_validacion='Por favor seleccione un lugar de nacimiento' invalido=errores.lugar_nacimiento %}
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -122,20 +122,20 @@
                                                             <div class="form-group">
                                                                 <div class="form-row">
                                                                     <div class="col-md-6">
-                                                                        {% select_tag eps 'eps_id' 'Seleccione una EPS' texto_label="EPS" value=colaborador.eps required="" mensaje_validacion='Por favor seleccione una EPS.' invalido=errores.eps %}
+                                                                        {% select_tag eps 'eps_id' 'Seleccione una EPS' texto_label="EPS" value=colaborador.eps_id required="" mensaje_validacion='Por favor seleccione una EPS.' invalido=errores.eps %}
                                                                     </div>
                                                                     <div class="col-md-6">
-                                                                        {% select_tag arl 'arl_id' 'Seleccione una ARL' texto_label="ARL" value=colaborador.arl required="" mensaje_validacion='Por favor seleccione una ARL.' invalido=errores.arl %}
+                                                                        {% select_tag arl 'arl_id' 'Seleccione una ARL' texto_label="ARL" value=colaborador.arl_id required="" mensaje_validacion='Por favor seleccione una ARL.' invalido=errores.arl %}
                                                                     </div>
                                                                 </div>
                                                             </div>
                                                             <div class="form-group">
                                                                 <div class="form-row">
                                                                     <div class="col-md-6">
-                                                                        {% select_tag afp 'afp_id' 'Seleccione una AFP' texto_label="AFP" value=colaborador.afp required="" mensaje_validacion='Por favor seleccione una AFP.' invalido=errores.afp %}
+                                                                        {% select_tag afp 'afp_id' 'Seleccione una AFP' texto_label="AFP" value=colaborador.afp_id required="" mensaje_validacion='Por favor seleccione una AFP.' invalido=errores.afp %}
                                                                     </div>
                                                                     <div class="col-md-6">
-                                                                        {% select_tag caja_compensacion 'caja_compensacion_id' 'Seleccione una caja de compensación' texto_label="Caja de compensación" value=colaborador.caja_compensacion required="" mensaje_validacion='Por favor seleccione una caja de compensación.' invalido=errores.caja_compensacion %}
+                                                                        {% select_tag caja_compensacion 'caja_compensacion_id' 'Seleccione una caja de compensación' texto_label="Caja de compensación" value=colaborador.caja_compensacion_id required="" mensaje_validacion='Por favor seleccione una caja de compensación.' invalido=errores.caja_compensacion %}
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -146,20 +146,20 @@
                                                             <div class="form-group">
                                                                 <div class="form-row">
                                                                     <div class="col-md-6">
-                                                                        {% select_tag jefe_inmediato 'jefe_inmediato_id' 'Seleccione el jefe inmediato' texto_label="Jefe inmediato" value=colaborador.jefe_inmediato  mensaje_validacion='Por favor seleccione un jefe inmediato.' invalido=errores.jefe_inmediato %}
+                                                                        {% select_tag jefe_inmediato 'jefe_inmediato_id' 'Seleccione el jefe inmediato' texto_label="Jefe inmediato" value=colaborador.jefe_inmediato_id  mensaje_validacion='Por favor seleccione un jefe inmediato.' invalido=errores.jefe_inmediato %}
                                                                     </div>
                                                                     <div class="col-md-6">
-                                                                        {% select_tag contrato 'contrato_id' 'Seleccione un contrato' texto_label="Contrato" value=colaborador.contrato required="" mensaje_validacion='Por favor seleccione un contrato' invalido=errores.contrato %}
+                                                                        {% select_tag contrato 'contrato_id' 'Seleccione un contrato' texto_label="Contrato" value=colaborador.contrato_id required="" mensaje_validacion='Por favor seleccione un contrato' invalido=errores.contrato %}
                                                                     </div>
                                                                 </div>
                                                             </div>
                                                             <div class="form-group">
                                                                 <div class="form-row">
                                                                     <div class="col-md-6">
-                                                                        {% select_tag tipo_contrato 'tipo_contrato_id' 'Seleccione un tipo de contrato' texto_label="Tipo de contrato" value=colaborador.tipo_contrato required="" mensaje_validacion='Por favor seleccione un tipo de contrato.' invalido=errores.tipo_contrato %}
+                                                                        {% select_tag tipo_contrato 'tipo_contrato_id' 'Seleccione un tipo de contrato' texto_label="Tipo de contrato" value=colaborador.tipo_contrato_id required="" mensaje_validacion='Por favor seleccione un tipo de contrato.' invalido=errores.tipo_contrato %}
                                                                     </div>
                                                                     <div class="col-md-6">
-                                                                        {% select_tag cargo 'cargo_id' 'Seleccione un cargo' texto_label="Cargo" value=colaborador.cargo required="" mensaje_validacion='Por favor seleccione un cargo' invalido=errores.cargo %}
+                                                                        {% select_tag cargo 'cargo_id' 'Seleccione un cargo' texto_label="Cargo" value=colaborador.cargo_id required="" mensaje_validacion='Por favor seleccione un cargo' invalido=errores.cargo %}
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -176,7 +176,7 @@
                                                             <div class="form-group">
                                                                 <div class="form-row">
                                                                     <div class="col-md-6">
-                                                                        {% select_tag proceso 'proceso_id' 'Seleccione un proceso' texto_label="Proceso" value=colaborador.proceso required="" mensaje_validacion='Por favor seleccione un proceso' invalido=errores.proceso %}
+                                                                        {% select_tag proceso 'proceso_id' 'Seleccione un proceso' texto_label="Proceso" value=colaborador.proceso_id required="" mensaje_validacion='Por favor seleccione un proceso' invalido=errores.proceso %}
                                                                     </div>
                                                                     <div class="col-md-6">
                                                                         {% input_number_tag 'salario' 'Salario' placeholder="Ingrese el salario" required="" min='0' max="99999999" onInput="validarLongitud(8,this)" value=colaborador.salario mensaje_validacion='Por favor digite el salario.' invalido=errores.salario %}
@@ -186,7 +186,7 @@
                                                             <div class="form-group">
                                                                 <div class="form-row">
                                                                     <div class="col-md-6">
-                                                                        {% select_tag rango 'rango_id' 'Seleccione un rango' texto_label="Rango" value=colaborador.rango required="" mensaje_validacion='Por favor seleccione un rango' invalido=errores.rango %}
+                                                                        {% select_tag rango 'rango_id' 'Seleccione un rango' texto_label="Rango" value=colaborador.rango_id required="" mensaje_validacion='Por favor seleccione un rango' invalido=errores.rango %}
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -237,9 +237,7 @@
             </div>
         </div>
     </div>
-    </div>
-    </div>
-    </div>
+
 {% endblock main %}
 
 {% block scripts %}
