--- a/TalentoHumano/templates/TalentoHumano/Colaboradores/index.html
+++ b/TalentoHumano/templates/TalentoHumano/Colaboradores/index.html
@@ -3,7 +3,6 @@
 {% load eva_tags %}
 <title>{% block titulo %}Perfil de colaboradores{% endblock %}</title>
 {% block styles %}
-    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/datagrid/datatables/datatables.bundle.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-regular.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-brands.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-solid.css' %}">
@@ -29,67 +28,83 @@
                         <br>
                         <div class="col-md-10">
                             <small>
-                                <a class="far fa-3x far fa-plus-circle"  href="{% url 'TalentoHumano:colaboradores-crear' %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Agregar colaborador"></a>
+                                <a class="far fa-3x far fa-plus-circle"  href="{% url 'TalentoHumano:colaboradores-crear' %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Agregar Colaborador"></a>
                             </small>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-xl-12">
-                            <div class="border-faded bg-faded p-3 mb-g d-flex">
-                                <input type="text" id="js-filter-contacts" name="filter-contacts" class="form-control shadow-inset-2 form-control-lg" placeholder="Filtrar empleados">
-                                <div class="btn-group btn-group-lg btn-group-toggle hidden-lg-down ml-3" data-toggle="buttons">
-                                    <label class="btn btn-default active">
-                                        <input type="radio" name="contactview" id="grid" checked="" value="grid"><i class="fas fa-table"></i>
-                                    </label>
-                                    <label class="btn btn-default">
-                                        <input type="radio" name="contactview" id="table" value="table"><i class="fas fa-th-list"></i>
-                                    </label>
+                    <div class="panel-container show">
+                        <div class="panel-content">
+                            <div class="panel-group">
+                                <div class="panel-body">
+                                    <div class="form-group">
+                                        <div class="form-row">
+                                        </div>
+                                    </div>
+                                    <div class="form-row">
+                                        <div class="col-xl-12">
+                                            <div class="border-faded bg-faded p-3 mb-g d-flex">
+                                                <input type="text" id="js-filter-contacts" name="filter-contacts" class="form-control shadow-inset-2 form-control-lg" placeholder="Filtrar empleados">
+                                                <div class="btn-group btn-group-lg btn-group-toggle hidden-lg-down ml-3" data-toggle="buttons">
+                                                    <label class="btn btn-default active">
+                                                        <input type="radio" name="contactview" id="grid" checked="" value="grid"><i class="fas fa-table"></i>
+                                                    </label>
+                                                    <label class="btn btn-default">
+                                                        <input type="radio" name="contactview" id="table" value="table"><i class="fas fa-th-list"></i>
+                                                    </label>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row" id="js-contacts">
+                                        {% for colaborador in colaboradores %}
+                                            {% include 'TalentoHumano/_common/_tarjeta_empleado.html' with crear='TalentoHumano:colaboradores-crear'  id_tarjeta=colaborador.id  nombre=colaborador.nombre_completo  cargo=colaborador.cargo  correo=colaborador.usuario.email ubicacion='Bogotá D.C' telefono=colaborador.telefono%}
+                                        {% endfor %}
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="row" id="js-contacts">
-                        {% for colaborador in colaboradores %}
-
-                        {% include 'TalentoHumano/_common/_tarjeta_empleado.html' with id_tarjeta='c_1' nombre=colaborador.nombre_completo  cargo=colaborador.cargo  correo=colaborador.usuario.email ubicacion='Bogotá D.C' %}
-
-                        {% endfor %}
-
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    {% endblock %}
-    {% block scripts %}
-         <script>
-            $(document).ready(function()
+    {% include 'Administracion/_elements/_modal_confirmar_eliminar.html' with objeto='talento-humano/entidades' %}
+{% endblock main%}
+
+{% block scripts %}
+    <script src="{% static 'EVA/Plantilla/js/notifications/sweetalert2/sweetalert2.bundle.js' %}"></script>
+    <script src="{% static 'TalentoHumano/js/confirmarEliminarEntidad.js' %}"></script>
+    <script src="{% static 'EVA/Plantilla/js/custom/ajaxDjango.js' %}"></script>
+    <script src="{% static 'EVA/Plantilla/js/formplugins/select2/select2.bundle.js' %}"></script>
+    <script src="{% static 'TalentoHumano/js/filtro_entidad.js' %}"></script>
+
+    <script>
+        $(document).ready(function()
+        {
+
+            $('input[type=radio][name=contactview]').change(function()
             {
-
-                $('input[type=radio][name=contactview]').change(function()
+                if (this.value == 'grid')
                 {
-                    if (this.value == 'grid')
-                    {
-                        $('#js-contacts .card').removeClassPrefix('mb-').addClass('mb-g');
-                        $('#js-contacts .col-xl-12').removeClassPrefix('col-xl-').addClass('col-xl-4');
-                        $('#js-contacts .js-expand-btn').addClass('d-none');
-                        $('#js-contacts .card-body + .card-body').addClass('show');
+                    $('#js-contacts .card').removeClassPrefix('mb-').addClass('mb-g');
+                    $('#js-contacts .col-xl-12').removeClassPrefix('col-xl-').addClass('col-xl-4');
+                    $('#js-contacts .js-expand-btn').addClass('d-none');
+                    $('#js-contacts .card-body + .card-body').addClass('show');
 
-                    }
-                    else if (this.value == 'table')
-                    {
-                        $('#js-contacts .card').removeClassPrefix('mb-').addClass('mb-1');
-                        $('#js-contacts .col-xl-4').removeClassPrefix('col-xl-').addClass('col-xl-12');
-                        $('#js-contacts .js-expand-btn').removeClass('d-none');
-                        $('#js-contacts .card-body + .card-body').removeClass('show');
-                    }
+                }
+                else if (this.value == 'table')
+                {
+                    $('#js-contacts .card').removeClassPrefix('mb-').addClass('mb-1');
+                    $('#js-contacts .col-xl-4').removeClassPrefix('col-xl-').addClass('col-xl-12');
+                    $('#js-contacts .js-expand-btn').removeClass('d-none');
+                    $('#js-contacts .card-body + .card-body').removeClass('show');
+                }
 
-                });
-
-                //initialize filter
-                initApp.listFilter($('#js-contacts'), $('#js-filter-contacts'));
             });
 
-        </script>
-    {% endblock %}
+            //initialize filter
+            initApp.listFilter($('#js-contacts'), $('#js-filter-contacts'));
+        });
 
+    </script>
+{% endblock scripts%}
