EVA-20 refactor: Se modifica el nombre del menú lateral

--- a/TalentoHumano/templates/TalentoHumano/_common/menu_aplicacion.html
+++ b/TalentoHumano/templates/TalentoHumano/_common/menu_aplicacion.html
@@ -5,9 +5,9 @@
     </a>
  </li>
   <li>
-    <a href="{% url 'TalentoHumano:colaboradores-index' %}" title="Perfil colaboradores" data-filter-tags="perfil colaboradores">
+    <a href="{% url 'TalentoHumano:colaboradores-index' %}" title="Colaboradores" data-filter-tags="Colaboradores">
         <i class="far fa-user"></i>
-        <span class="nav-link-text" data-i18n="nav.talentohumano_perfil-colaboradores">Perfil de colaboradores</span>
+        <span class="nav-link-text" data-i18n="nav.talentohumano_perfil-colaboradores">Colaboradores</span>
     </a>
  </li>
 
