EVA-20 feat: Se agrega al index dirección para eliminar colaboradores y se incluye librería para hacer esto

--- a/TalentoHumano/templates/TalentoHumano/Colaboradores/crear-editar.html
+++ b/TalentoHumano/templates/TalentoHumano/Colaboradores/crear-editar.html
@@ -112,6 +112,9 @@
                                                                     <div class="col-md-6">
                                                                         {% select_tag lugar_nacimiento 'centro_poblado_id' 'Seleccione lugar de nacimiento' texto_label="Lugar de nacimiento" value=colaborador.lugar_nacimiento.id required="" mensaje_validacion='Por favor seleccione un lugar de nacimiento' invalido=errores.lugar_nacimiento %}
                                                                     </div>
+{#                                                                     <div class="col-md-6">#}
+{#                                                                        {% input_image_tag 'foto_perfil' 'Foto de perfil' placeholder="Seleccione la foto de perfil"   value=colaborador.foto_perfil mensaje_validacion='Por favor seleccione una foto de perfil' invalido=errores.foto_perfil alt='' src=colaborador.image.url %}#}
+{#                                                                    </div>#}
                                                                 </div>
                                                             </div>
 
