EVA-20 refactor: Se remueve hipervínculo de la opción teléfono y se agrega el campo identificación en la tarjeta del colaborador

--- a/TalentoHumano/templates/TalentoHumano/_common/_tarjeta_empleado.html
+++ b/TalentoHumano/templates/TalentoHumano/_common/_tarjeta_empleado.html
@@ -26,8 +26,10 @@
         </div>
         <div class="card-body p-0 collapse show">
             <div class="p-3">
-                <a href="tel: {{ telefono }}" class="mt-1 d-block fs-sm fw-400 text-dark">
+                <a  class="mt-1 d-block fs-sm fw-400 text-dark">
                     <i class="fas fa-mobile-alt text-muted mr-2"></i> {{ telefono }}</a>
+                <a class="mt-1 d-block fs-sm fw-400 text-dark">
+                    <i class="fas fa-address-card text-muted mr-2"></i> {{ identificacion }}</a>
                 <a href="mailto: {{ correo }}" class="mt-1 d-block fs-sm fw-400 text-dark">
                     <i class="fas fa-envelope text-muted mr-2"></i> {{ correo }}</a>
                 <address class=" text-muted"><i class="fas fa-map-pin mr-2"></i> {{ direccion }}</address>
