EVA-22 feat: Se muestra logo de arios como marca de agua en la pantalla de inicio.

--- a/Administracion/templates/Administracion/inicio_sesion/iniciar-sesion.html
+++ b/Administracion/templates/Administracion/inicio_sesion/iniciar-sesion.html
@@ -48,6 +48,8 @@
                                     Inicio de sesión
                                 </small>
                             </h2>
+                            <br><br><br>
+                             <img src="{% static 'EVA/Plantilla/img/logo-transparente.png' %}" style="width: 100%; opacity: 20%">
                         </div>
                         <div class="col-sm-12 col-md-6 col-lg-5 col-xl-4 ml-auto">
                             <h1 class="text-white fw-300 mb-3 d-sm-block d-md-none">
